--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ button {
 	cursor: pointer;
 }
 
+.letters {
+	width: 20px;
+	height: 20px;
+}
+
 .center {
 	text-align: center;
 }
@@ -24,4 +29,12 @@ button {
 
 .auto {
 	margin: auto;
+}
+
+.green {
+	background-color: green;
+}
+
+.red {
+	background-color: red;
 }
