--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
 	box-sizing: border-box;
+	
 }
 
 body {
@@ -9,6 +10,12 @@ body {
 button {
 	width: 90px;
 	cursor: pointer;
+}
+
+span {
+	font-size: 20px;
+	margin: 3px;
+	margin-right:5px;
 }
 
 .letters {
